--- a/requirements.txt
+++ b/requirements.txt
@@ -1,439 +1,11 @@
-absl-py==2.0.0
-accelerate==1.2.0
-aiofiles==23.2.1
-aiohttp==3.9.1
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.6.0
-ansi2html==1.9.1
-anyascii==0.3.2
-anyio==4.0.0
-anytree==2.12.1
-appnope==0.1.3
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.4.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.2.0
-audioread==3.0.1
-Babel==2.12.1
-backcall==0.2.0
-bangla==0.0.2
-beautifulsoup4==4.12.2
-bert-score==0.3.13
-bidict==0.22.1
-bitsandbytes==0.40.2
-bleach==6.0.0
-blinker==1.6.3
-blis==0.7.11
-bnnumerizer==0.0.2
-bnunicodenormalizer==0.1.7
-boto3==1.34.82
-botocore==1.34.82
-bpemb==0.3.5
-branca==0.7.2
-bs4==0.0.2
-cached_path==1.6.4
-cachetools==5.3.2
-cads-api-client==1.4.5
-catalogue==2.0.10
-cdsapi==0.7.3
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpathlib==0.16.0
-cn2an==0.5.22
-coloredlogs==15.0.1
-comet-ml==3.35.5
-comm==0.1.4
-confection==0.1.4
-configobj==5.0.8
-confluent-kafka==2.8.0
-conllu==4.5.3
-contourpy==1.1.1
-coqpit==0.0.17
-cycler==0.12.1
-cymem==2.0.8
-Cython==3.0.11
-dash==2.14.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-datasets==2.18.0
-dateparser==1.1.8
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.7
-diskcache==5.6.3
-Distance==0.1.3
-distlib==0.3.8
-distro==1.9.0
-docopt==0.6.2
-dulwich==0.21.7
-editdistance==0.8.1
-editdistpy==0.1.5
-einops==0.8.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-encodec==0.1.1
-eng-to-ipa==0.0.2
-everett==3.1.0
-executing==1.2.0
-faiss-cpu==1.8.0
-fastapi==0.115.6
-fastjsonschema==2.18.0
-fasttext==0.9.2
-ffmpy==0.4.0
-filelock==3.13.1
-fiona==1.9.6
-flair==0.13.1
-Flask==3.0.0
-Flask-SocketIO==5.3.6
-flatbuffers==23.5.26
-folium==0.16.0
-fonttools==4.43.1
-fpdf==1.7.2
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.10.0
-ftfy==6.2.0
-fugashi==1.3.0
-g2p-en==2.1.0
-g2pkk==0.1.2
-gast==0.5.4
-gdown==5.1.0
-gensim==4.3.2
-geographiclib==2.0
-geojson==3.1.0
-geopandas==0.14.3
-geopy==2.4.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.1
-google-api-python-client==2.138.0
-google-auth==2.36.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.19.0
-google-crc32c==1.6.0
-google-generativeai==0.7.2
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.63.2
-gradio==5.8.0
-gradio_client==1.5.1
-grpcio==1.65.1
-grpcio-status==1.62.2
-gruut==2.2.3
-gruut-ipa==0.13.0
-gruut-lang-de==2.0.1
-gruut-lang-en==2.0.1
-gruut-lang-es==2.0.1
-gruut-lang-fr==2.0.2
-gTTS==2.5.4
+asgiref==3.8.1
+Django==5.2
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+PyMySQL==1.1.1
+sqlparse==0.5.3
 gunicorn==21.2.0
-h11==0.14.0
-h5py==3.10.0
-hangul-romanize==0.1.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-huggingface-hub==0.26.5
-humanfriendly==10.0
-idna==3.4
-ImageHash==4.3.1
-importlib-metadata==7.0.0
-inflect==7.0.0
-influxdb==5.3.1
-ipykernel==6.25.2
-ipython==8.15.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jaconv==0.4.0
-jamo==0.4.1
-Janome==0.5.0
-jedi==0.19.0
-jieba==0.42.1
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.3.2
-json5==0.9.14
-jsonlines==1.2.0
-jsonpointer==2.4
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.6
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.25.0
-kafka-python-ng==2.2.3
-keras==2.14.0
-kiwisolver==1.4.5
-langcodes==3.4.0
-langdetect==1.0.9
-langid==1.1.6
-language-tool-python==2.7.1
-language_data==1.2.0
-lazy_loader==0.4
-lemminflect==0.2.3
-libclang==16.0.6
-librosa==0.9.1
-lightfm==1.17
-litellm==1.35.31
-llama_cpp_python==0.2.65
-llvmlite==0.43.0
-loguru==0.7.2
-lru-dict==1.3.0
-lxml==5.2.1
-marisa-trie==1.1.0
-Markdown==3.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mecab-python3==1.0.9
-melotts @ git+https://github.com/myshell-ai/MeloTTS.git@5b538481e24e0d578955be32a95d88fcbde26dc8
-metar-taf-parser-mivek==1.9.0
-mistune==3.0.1
-ml-dtypes==0.2.0
-mlxtend==0.23.1
-more-itertools==10.2.0
-mpld3==0.5.10
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.4
-multiprocess==0.70.15
-multiurl==0.3.1
-murmurhash==1.0.10
-nbclient==0.8.0
-nbconvert==7.8.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==2.8.8
-nltk==3.8.1
-notebook==7.0.4
-notebook_shim==0.2.3
-num2words==0.5.12
-numba==0.60.0
-numpy==1.26.0
-oauthlib==3.2.2
-onnx==1.16.0
-onnxconverter-common==1.14.0
-onnxmltools==1.12.0
-onnxruntime==1.17.3
-openai==1.23.6
-OpenHowNet==2.0
-opt-einsum==3.3.0
-orjson==3.10.12
-outcome==1.3.0.post0
-overrides==7.4.0
-packaging==23.1
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pdf2image==1.17.0
-pdfminer==20191125
-peft==0.4.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.1
-pinyin==0.4.0
-pipenv==2024.4.1
-plac==1.4.3
-platformdirs==3.10.0
-plotly==5.18.0
-pooch==1.8.2
-pptree==3.1
-preshed==3.0.9
-proces==0.1.7
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-proto-plus==1.24.0
-protobuf==4.25.4
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==14.0.1
-pyarrow-hotfix==0.6
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pybind11==2.12.0
-pycparser==2.21
-pycryptodome==3.19.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.1
-pydot==1.4.2
-pydub==0.25.1
-pyenchant==3.2.2
-Pygments==2.16.1
-pykakasi==2.2.1
-PyMuPDF==1.24.9
-PyMuPDFb==1.24.9
-pynndescent==0.5.13
-pyparsing==3.1.1
-PyPDF2==3.0.1
-pypinyin==0.50.0
-pyproj==3.6.1
-pysbd==0.3.4
-PySocks==1.7.1
-pyspellchecker==0.7.2
-python-box==6.1.0
-python-crfsuite==0.9.11
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-engineio==4.8.0
-python-json-logger==2.0.7
-python-multipart==0.0.19
-python-socketio==5.10.0
-pytorch_revgrad==0.2.0
-pytz==2023.3.post1
-PyWavelets==1.6.0
-PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.30.2
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-resampy==0.4.3
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.0
-rouge==1.0.1
-rpds-py==0.10.3
-rpy2==3.5.16
-rsa==4.9
-ruff==0.8.2
-s3transfer==0.10.1
-safehttpx==0.1.6
-safetensors==0.4.5
-scikit-learn==1.3.1
-scipy==1.11.2
-seaborn==0.13.0
-segtok==1.5.11
-selenium==4.20.0
-semantic-version==2.10.0
-semver==3.0.2
-Send2Trash==1.8.2
-sentence-transformers==2.7.0
-sentencepiece==0.2.0
-sentry-sdk==1.39.1
-shapely==2.0.4
-shellingham==1.5.4
-simple-websocket==1.0.0
-simplejson==3.19.2
-six==1.16.0
-skl2onnx==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soupsieve==2.5
-soxr==0.5.0.post1
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-sqlitedict==2.1.0
-srsly==2.4.8
-stack-data==0.6.2
-starlette==0.41.3
-statsmodels==0.14.0
-streamlit==1.34.0
-streamlit_folium==0.20.0
-SudachiDict-core==20241021
-SudachiPy==0.6.9
-sympy==1.12
-symspellpy==6.7.8
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.14.0
-termcolor==2.3.0
-terminado==0.17.1
-terminaltables==3.1.10
-textattack==0.3.10
-textblob==0.18.0.post0
-thinc==8.2.3
-threadpoolctl==3.2.0
-tika==2.6.0
-tiktoken==0.6.0
-timm==0.9.16
-tinycss2==1.2.1
-tokenizers==0.21.0
-toml==0.10.2
-tomlkit==0.13.2
-toolz==0.12.1
-torch==2.3.0
-torchaudio==2.3.0
-torchvision==0.16.1
-tornado==6.3.3
-tqdm==4.66.1
-trainer==0.0.36
-traitlets==5.10.1
-transformer-smaller-training-vocab==0.4.0
-transformers==4.47.0
-trio==0.25.0
-trio-websocket==0.11.1
-trl==0.4.7
-TTS==0.22.0
-ttstokenizer==1.0.0
-txtai @ git+https://github.com/neuml/txtai@e2af6cec4095dbbbedc820322a5087899cc7054b
-txtsplit==1.0.0
-typeguard==4.2.1
-typer==0.15.1
-typing_extensions==4.11.0
-tzdata==2023.3
-tzlocal==5.2
-umap-learn==0.5.7
-Unidecode==1.3.7
-unidic==1.1.0
-unidic-lite==1.0.8
-unsloth @ git+https://github.com/unslothai/unsloth.git@81819c337d1c35c5ed9873637ace27b7d5b4e384
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.18
-uvicorn==0.32.1
-virtualenv==20.26.0
-wasabi==0.10.1
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.3.4
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.3.3
-websockets==14.1
-Werkzeug==3.0.0
-whitenoise==6.9.0
-Wikipedia-API==0.6.0
-word2number==1.1
-wordcloud==1.9.2
-wrapt==1.14.1
-wsproto==1.2.0
-wurlitzer==3.0.3
-xgboost==2.0.3
-xxhash==3.4.1
-xyzservices==2024.6.0
-yarl==1.9.4
-zipp==3.17.0
+whitenoise==5.3.0
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
+pytz==2020.4
