--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules/
+/build
 # Python
 *.pyc
 *.pyo
@@ -8,7 +9,6 @@ __pycache__/
 *.log
 db.sqlite3      # If you're using SQLite for local development
 media/
-static/
 *.pot
 *.py[cod]
 *.db
